list posts from API and access dynamic rout per slug

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,5 +1,17 @@
+@import './breakpoints';
+
 @mixin flex-center { 
     display: flex;
     align-items: center;
     justify-content: center;
 } 
+
+@mixin content-size {
+    width: 100vw;
+    padding: 0 16px;
+
+    @media #{$BREAKPOINT-DESK} {
+        max-width: 1280px;
+        margin: 0 auto;
+    }
+}
