--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,61 +1,45 @@
 ---
 interface Props {
 	title: string;
-	body: string;
+	description: string;
+	thumb?: string;
 	href: string;
+	categories: [];
 }
-
-const { href, title, body } = Astro.props;
+  
+const { href, title, description, thumb, categories } = Astro.props;
 ---
-
-<li class="link-card">
-	<a href={href}>
-		<h2>
-			{title}
-			<span>&rarr;</span>
-		</h2>
-		<p>
-			{body}
-		</p>
+  
+  <li class="link-card">
+	<a href={`/posts/${href}`}>
+		<article class="article-card">
+			<header>
+				<img src={thumb} alt="Group of people playing pickleball" class="article-card__image">
+			</header>
+			<section class="article-card__content">
+				<h2 class="article-card__title">{title}</h2>
+				<p class="article-card__description">{description}</p>
+				<footer class="article-card__tags">
+					{categories.map((category) => (
+						<a href="#" class="tag tag--primary">{category}</a>
+					))}
+				</footer>
+			</section>
+		</article>
 	</a>
-</li>
-<style>
-	.link-card {
-		list-style: none;
-		display: flex;
-		padding: 1px;
-		background-color: #23262d;
-		background-image: none;
-		background-size: 400%;
-		border-radius: 7px;
-		background-position: 100%;
-		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.1);
-	}
-	.link-card > a {
-		width: 100%;
-		text-decoration: none;
-		line-height: 1.4;
-		padding: calc(1.5rem - 1px);
-		border-radius: 8px;
-		color: white;
-		background-color: #23262d;
-		opacity: 0.8;
-	}
-	h2 {
-		margin: 0;
-		font-size: 1.25rem;
-		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-	}
-	p {
-		margin-top: 0.5rem;
-		margin-bottom: 0;
-	}
-	.link-card:is(:hover, :focus-within) {
-		background-position: 0;
-		background-image: var(--accent-gradient);
-	}
-	.link-card:is(:hover, :focus-within) h2 {
-		color: rgb(var(--accent-light));
-	}
-</style>
+  </li>
+
+  <article class="article-card">
+	<header>
+	  <img src="path/to/image.jpg" alt="Group of people playing pickleball" class="article-card__image">
+	</header>
+	<section class="article-card__content">
+	  <h2 class="article-card__title">Pickleball for beginners: Getting started</h2>
+	  <p class="article-card__description">If you are a beginner pickleball player, here are some tips on the best ways to get started.</p>
+	  <footer class="article-card__tags">
+		<a href="link/to/pickleball-for-beginners" class="tag tag--primary">pickleball for beginners</a>
+		<a href="link/to/video" class="tag tag--secondary">video</a>
+	  </footer>
+	</section>
+  </article>
+  
