--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,5 +1,6 @@
 @import '../../styles/mixins';
 @import '../../styles/vars';
+@import '../../styles/breakpoints';
 
 .footer {
     width: 100vw;
@@ -7,8 +8,18 @@
     display: flex;
     flex-direction: column;
     justify-content: left;
-
     padding: 52px 32px 44px 32px;
+
+    @media #{$BREAKPOINT-TABLET} {
+        flex-direction: row;
+        align-items: center;
+        justify-content: left;
+    }
+
+    @media #{$BREAKPOINT-DESK} {
+        max-width: 1280px;
+        margin: 0 auto;
+    }
 }
 
 .footerCenter {
@@ -17,15 +28,41 @@
     gap: 16px;
 
     margin: 32px 0;
+
+    @media #{$BREAKPOINT-TABLET} {
+        flex-direction: row;
+        margin: 0;
+        margin-left: 64px;
+    }
 }
 
-.copyright {
-    @include flex-center;
+.footerRigth {
+    display: flex;
+    flex-direction: column;
+    row-gap: 16px;
     
-    height: 32px;
-    font-size: 14px;
-    text-align: center;
+    @media #{$BREAKPOINT-TABLET} {
+        margin: 0 0 0 auto;
+        float: right;
+    }
+}
+
+.navList {
+    list-style-type: none;
     margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+
+    @media #{$BREAKPOINT-TABLET} {
+        gap: 8px;
+    }
+
+    li {
+        font-size: 12px;
+        color: $font-color;
+    }
 }
 
 .footerBottom {
@@ -43,22 +80,17 @@
     }
 }
 
-.navList {
-    list-style-type: none;
+.copyright {
+    @include flex-center;
+    
+    height: 32px;
+    font-size: 14px;
+    text-align: center;
     margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-
-    li {
-        font-size: 12px;
-        color: $font-color;
-    }
 }
 
-.footerLeft, .footerCenter, .footerRight {
-    width: 100%;
+.logo {
+    width: 135px;
 }
 
 .socialIcons {
@@ -67,6 +99,22 @@
     justify-content: space-between;
 }
 
-.logo {
-    width: 135px;
+.loginButton {
+    background-color: $theme-color-orange;
+    color: $color-white-0;
+    border: 0;
+}
+
+.logoutButton {
+    background-color: $color-white-0;
+    color: $theme-color-orange;
+}
+
+.loginButton, .logoutButton {
+    width: 116px;
+    padding: 8px 32px;
+    border: 2px solid $theme-color-orange;
+    border-radius: 30px;
+    font-size: 12px;
+    font-weight: 700;
 }
