--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,6 +8,7 @@ body {
     font-family: 'Montserrat Variable', sans-serif;
     
     * {
+        margin: 0;
         box-sizing: border-box;
     }
 }
